deploy/route.yaml
# Route for friends app
apiVersion: cloudstate.io/v1alpha1
kind: Route
metadata:
  name: "chat-routes"
spec:
  http:
  - name: "friends-route"
    match:
    - url:
        prefix: "/"
    route:
      service: friends
